<resources>
    <string name="app_name">Shoe Store Inventory</string>
    <string name="Terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_message">We are delighted to see you. \nLog in or Sign up and enjoy!</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="password_icon" />
    <string name="email_icon" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="shoes_image" />
    <string name="welcome_text_explanation">With Shoe Store Inventory you can keep a dynamic and precise control of the products in your shop.</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="image_icon" />
    <string name="or_text">or</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="shoe_image_item" />
    <string name="add_new_product_text">Add a new product</string>
    <string name="name_text">Name:</string>
    <string name="brand_text">Brand:</string>
    <string name="gender_text">Gender:</string>
    <string name="size_text">size:</string>
    <string name="description_text">Description:</string>
    <string name="add">Add</string>
    <string name="cancel_text">Cancel</string>
    <string name="logout">Logout</string>
    <string name="list_shoes">All your shoes in one list.</string>
    <string name="create_a_list">Create a list with all your shoes, selecting some of their characteristics such as name, brand, size, and much more.</string>
    <string name="add_new_shoes">Add as many shoes as you want.</string>
    <string name="add_new_shoe_text">Add new shoes and their characteristics, as well as a photo and description of all of them, and have control of all your models, brands, etc.</string>

    <string-array name="options">
        <item>Women</item>
        <item>Men</item>
        <item>Kid</item>
    </string-array>

</resources>